package org.dependencytrack.processor.scanner.ossindex;

import com.github.packageurl.PackageURL;
import io.github.resilience4j.circuitbreaker.CircuitBreaker;
import io.github.resilience4j.core.IntervalFunction;
import io.micrometer.core.instrument.MeterRegistry;
import io.quarkus.cache.Cache;
import io.quarkus.cache.CacheName;
import jakarta.enterprise.context.ApplicationScoped;
import jakarta.inject.Inject;
import jakarta.inject.Named;
import org.apache.kafka.streams.processor.api.Processor;
import org.apache.kafka.streams.state.KeyValueStore;
import org.apache.kafka.streams.state.StoreBuilder;
import org.dependencytrack.client.ossindex.OssIndexClient;
import org.dependencytrack.config.OssIndexConfig;
import org.dependencytrack.processor.retry.RetryableRecord;
import org.dependencytrack.processor.scanner.ScanProcessorSupplier;
import org.dependencytrack.util.PurlUtils;
import org.eclipse.microprofile.rest.client.inject.RestClient;
import org.hyades.proto.vulnanalysis.internal.v1beta1.ScanTask;
import org.hyades.proto.vulnanalysis.v1.Component;
import org.hyades.proto.vulnanalysis.v1.ScanKey;
import org.hyades.proto.vulnanalysis.v1.Scanner;
import org.hyades.proto.vulnanalysis.v1.ScannerResult;

import java.util.Set;

import static org.hyades.proto.vulnanalysis.v1.Scanner.SCANNER_OSSINDEX;

@ApplicationScoped
public class OssIndexProcessorSupplier implements ScanProcessorSupplier {

    // https://ossindex.sonatype.org/ecosystems
    private final OssIndexClient client;
    private final OssIndexConfig config;
    private final Cache cache;
    private final CircuitBreaker circuitBreaker;
    private final StoreBuilder<KeyValueStore<ScanKey, RetryableRecord<String, ScanTask>>> batchStoreBuilder;
    private final StoreBuilder<KeyValueStore<ScanKey, RetryableRecord<String, ScanTask>>> retryStoreBuilder;
    private final IntervalFunction retryIntervalFunction;
    private final MeterRegistry meterRegistry;

    private final Set<String> supportedPackageUrlTypes;

    @Inject
    public OssIndexProcessorSupplier(@RestClient final OssIndexClient client,
                                     final OssIndexConfig config,
                                     @CacheName("ossindex") final Cache cache,
                                     @Named("ossIndexCircuitBreaker") final CircuitBreaker circuitBreaker,
                                     @Named("ossIndexBatchStoreBuilder") final StoreBuilder<KeyValueStore<ScanKey, RetryableRecord<String, ScanTask>>> batchStoreBuilder,
                                     @Named("ossIndexRetryStoreBuilder") final StoreBuilder<KeyValueStore<ScanKey, RetryableRecord<String, ScanTask>>> retryStoreBuilder,
                                     @Named("ossIndexRetryIntervalFunction") final IntervalFunction retryIntervalFunction,
                                     final MeterRegistry meterRegistry,
                                     @Named("ossSupportedPackageUrlTypes") final Set<String> supportedPackageUrlTypes) {
        this.client = client;
        this.config = config;
        this.cache = cache;
        this.circuitBreaker = circuitBreaker;
        this.batchStoreBuilder = batchStoreBuilder;
        this.retryStoreBuilder = retryStoreBuilder;
        this.retryIntervalFunction = retryIntervalFunction;
        this.meterRegistry = meterRegistry;
        this.supportedPackageUrlTypes = supportedPackageUrlTypes;
    }

    @Override
    public boolean isEnabled() {
        return config.enabled();
    }

    @Override
    public Scanner scannerIdentity() {
        return SCANNER_OSSINDEX;
    }

    @Override
    public int topicPartitions() {
        return config.topicPartitions();
    }

    @Override
    public boolean canProcess(final Component component) {
        return !component.getInternal() && PurlUtils.parsePurl(component.getPurl())
                .map(PackageURL::getType)
                .map(supportedPackageUrlTypes::contains)
                .orElse(false);
    }

    @Override
    public Processor<String, ScanTask, ScanKey, ScannerResult> get() {
        return new OssIndexProcessor(client, cache, circuitBreaker, batchStoreBuilder.name(), config.batchInterval(),
                retryStoreBuilder.name(), retryIntervalFunction, config.retry().maxAttempts(), meterRegistry, config);
    }

    @Override
    public Set<StoreBuilder<?>> stores() {
        return Set.of(batchStoreBuilder, retryStoreBuilder);
    }

}
