package org.dependencytrack.vulnanalyzer.processor.scanner.ossindex;

import com.fasterxml.jackson.core.type.TypeReference;
import com.fasterxml.jackson.databind.ObjectMapper;
import com.github.packageurl.MalformedPackageURLException;
import com.github.packageurl.PackageURL;
import io.github.resilience4j.circuitbreaker.CallNotPermittedException;
import io.github.resilience4j.circuitbreaker.CircuitBreaker;
import io.quarkus.cache.Cache;
import io.quarkus.cache.CacheName;
import io.quarkus.test.junit.QuarkusTest;
import io.quarkus.test.junit.TestProfile;
import io.quarkus.test.InjectMock;
import jakarta.inject.Inject;
import jakarta.inject.Named;
import jakarta.ws.rs.WebApplicationException;
import jakarta.ws.rs.core.Response;
import org.apache.kafka.common.serialization.StringDeserializer;
import org.apache.kafka.common.serialization.StringSerializer;
import org.apache.kafka.streams.TestInputTopic;
import org.apache.kafka.streams.TestOutputTopic;
import org.apache.kafka.streams.Topology;
import org.apache.kafka.streams.TopologyTestDriver;
import org.apache.kafka.streams.test.TestRecord;
import org.dependencytrack.vulnanalyzer.client.ossindex.ComponentReport;
import org.dependencytrack.vulnanalyzer.client.ossindex.ComponentReportRequest;
import org.dependencytrack.vulnanalyzer.client.ossindex.OssIndexClient;
import org.eclipse.microprofile.rest.client.inject.RestClient;
import org.dependencytrack.vulnanalyzer.VulnerabilityAnalyzerTestProfile;
import org.dependencytrack.proto.KafkaProtobufDeserializer;
import org.dependencytrack.proto.KafkaProtobufSerializer;
import org.dependencytrack.proto.vulnanalysis.internal.v1beta1.ScanTask;
import org.dependencytrack.proto.vulnanalysis.v1.Component;
import org.dependencytrack.proto.vulnanalysis.v1.ScanKey;
import org.dependencytrack.proto.vulnanalysis.v1.ScanStatus;
import org.dependencytrack.proto.vulnanalysis.v1.Scanner;
import org.dependencytrack.proto.vulnanalysis.v1.ScannerResult;
import org.junit.jupiter.api.AfterEach;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.Test;
import org.mockito.Mockito;

import java.io.IOException;
import java.net.SocketTimeoutException;
import java.nio.file.Paths;
import java.time.Duration;
import java.util.Collections;
import java.util.List;
import java.util.UUID;

import static org.assertj.core.api.Assertions.assertThat;
import static org.mockito.ArgumentMatchers.any;
import static org.mockito.Mockito.times;
import static org.mockito.Mockito.verify;
import static org.mockito.Mockito.when;

@QuarkusTest
@TestProfile(VulnerabilityAnalyzerTestProfile.class)
class OssIndexProcessorTest {

    @Inject
    OssIndexProcessorSupplier processorSupplier;

    @Inject
    @CacheName("ossindex")
    Cache cache;

    @Inject
    @Named("ossIndexCircuitBreaker")
    CircuitBreaker circuitBreaker;

    @InjectMock
    @RestClient
    OssIndexClient ossIndexClientMock;

    private TopologyTestDriver testDriver;
    private TestInputTopic<String, ScanTask> inputTopic;
    private TestOutputTopic<ScanKey, ScannerResult> outputTopic;

    @BeforeEach
    void beforeEach() {
        final var topology = new Topology();
        topology.addSource("sourceProcessor", new StringDeserializer(),
                new KafkaProtobufDeserializer<>(ScanTask.parser()), "input-topic");
        topology.addProcessor("ossIndexProcessor", processorSupplier, "sourceProcessor");
        topology.addSink("sinkProcessor", "output-topic",
                new KafkaProtobufSerializer<>(), new KafkaProtobufSerializer<>(), "ossIndexProcessor");

        testDriver = new TopologyTestDriver(topology);
        inputTopic = testDriver.createInputTopic("input-topic",
                new StringSerializer(), new KafkaProtobufSerializer<>());
        outputTopic = testDriver.createOutputTopic("output-topic",
                new KafkaProtobufDeserializer<>(ScanKey.parser()), new KafkaProtobufDeserializer<>(ScannerResult.parser()));
    }

    @AfterEach
    void afterEach() {
        testDriver.close();
        circuitBreaker.reset();
        cache.invalidateAll().await().indefinitely();
    }

    @Test
    void testNoResults() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenReturn(getOssIndexResponseTestData("one-component-no-issues-response.json"));

        final TestRecord<String, ScanTask> inputRecord = createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1?type=jar&foo=bar");
        inputTopic.pipeInput(inputRecord);

        // Wait for the incomplete batch to be analyzed
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        assertThat(outputTopic.getQueueSize()).isEqualTo(1);
        final TestRecord<ScanKey, ScannerResult> outputRecord = outputTopic.readRecord();
        assertThat(outputRecord.key()).isEqualTo(inputRecord.getValue().getKey());
        assertThat(outputRecord.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
        assertThat(outputRecord.getValue().hasFailureReason()).isFalse();
        assertThat(outputRecord.getValue().getScanner()).isEqualTo(Scanner.SCANNER_OSSINDEX);
        assertThat(outputRecord.getValue().getBom().getVulnerabilitiesCount()).isZero();
    }

    @Test
    void testNoMatchingResults() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenReturn(Collections.emptyList());

        final TestRecord<String, ScanTask> inputRecord = createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1?type=jar&foo=bar");
        inputTopic.pipeInput(inputRecord);

        // Wait for the incomplete batch to be analyzed
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        assertThat(outputTopic.getQueueSize()).isEqualTo(1);
        final TestRecord<ScanKey, ScannerResult> outputRecord = outputTopic.readRecord();
        assertThat(outputRecord.key()).isEqualTo(inputRecord.getValue().getKey());
        assertThat(outputRecord.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
        assertThat(outputRecord.getValue().hasFailureReason()).isFalse();
        assertThat(outputRecord.getValue().getScanner()).isEqualTo(Scanner.SCANNER_OSSINDEX);
        assertThat(outputRecord.getValue().getBom().getVulnerabilitiesCount()).isZero();
    }

    @Test
    void testMultipleResults() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenReturn(getOssIndexResponseTestData("multiple-components-multiple-issues-response.json"));

        final TestRecord<String, ScanTask> inputRecordA = createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1?type=jar&foo=bar");
        final TestRecord<String, ScanTask> inputRecordB = createTestRecord("pkg:maven/org.yaml/snakeyaml@1.33?type=jar&foo=bar");
        inputTopic.pipeInput(inputRecordA);
        inputTopic.pipeInput(inputRecordB);

        // Wait for the incomplete batch to be analyzed
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        assertThat(outputTopic.getQueueSize()).isEqualTo(2);
        TestRecord<ScanKey, ScannerResult> outputRecord = outputTopic.readRecord();
        assertThat(outputRecord.key()).isEqualTo(inputRecordA.getValue().getKey());
        assertThat(outputRecord.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
        assertThat(outputRecord.getValue().hasFailureReason()).isFalse();
        assertThat(outputRecord.getValue().getScanner()).isEqualTo(Scanner.SCANNER_OSSINDEX);
        assertThat(outputRecord.getValue().getBom().getVulnerabilitiesList()).satisfiesExactlyInAnyOrder(
                vulnerability -> {
                    assertThat(vulnerability.getId()).isEqualTo("CVE-2020-36518");
                    assertThat(vulnerability.getSource().getName()).isEqualTo("NVD");
                },
                vulnerability -> {
                    assertThat(vulnerability.getId()).isEqualTo("CVE-2022-42003");
                    assertThat(vulnerability.getSource().getName()).isEqualTo("NVD");
                },
                vulnerability -> {
                    assertThat(vulnerability.getId()).isEqualTo("CVE-2022-42004");
                    assertThat(vulnerability.getSource().getName()).isEqualTo("NVD");
                }
        );

        outputRecord = outputTopic.readRecord();
        assertThat(outputRecord.key()).isEqualTo(inputRecordB.getValue().getKey());
        assertThat(outputRecord.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
        assertThat(outputRecord.getValue().hasFailureReason()).isFalse();
        assertThat(outputRecord.getValue().getScanner()).isEqualTo(Scanner.SCANNER_OSSINDEX);
        assertThat(outputRecord.getValue().getBom().getVulnerabilitiesList()).satisfiesExactly(
                vulnerability -> {
                    assertThat(vulnerability.getId()).isEqualTo("CVE-2022-1471");
                    assertThat(vulnerability.getSource().getName()).isEqualTo("NVD");
                }
        );
    }

    @Test
    void testBatching() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenReturn(Collections.emptyList());

        for (int i = 0; i < 512; i++) {
            inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.%s?type=jar&foo=bar".formatted(i)));
        }

        assertThat(outputTopic.getQueueSize()).isEqualTo(512);
        verify(ossIndexClientMock, times(4)).getComponentReports(any(ComponentReportRequest.class));
    }

    @Test
    void testCachingWithResult() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenReturn(getOssIndexResponseTestData("one-component-one-issue-response.json"));

        inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1?type=jar&foo=bar"));

        // Wait for the incomplete batch to be analyzed
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1?type=jar&baz=qux"));

        // Wait for the incomplete batch to be analyzed
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1"));

        // Wait for the incomplete batch to be analyzed
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        assertThat(outputTopic.getQueueSize()).isEqualTo(3);
        assertThat(outputTopic.readRecordsToList()).allSatisfy(record ->
                assertThat(record.getValue().getBom().getVulnerabilitiesList()).satisfiesExactly(vulnerability ->
                        assertThat(vulnerability.getId()).isEqualTo("CVE-2020-36518")));

        // Verify that the client was invoked just once, despite three results being returned.
        verify(ossIndexClientMock, Mockito.times(1)).getComponentReports(any(ComponentReportRequest.class));
    }

    @Test
    void testCachingWithNoResults() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenReturn(getOssIndexResponseTestData("one-component-no-issues-response.json"));

        inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1?type=jar&foo=bar"));

        // Wait for the incomplete batch to be analyzed
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1?type=jar&baz=qux"));

        // Wait for the incomplete batch to be analyzed
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1"));

        // Wait for the incomplete batch to be analyzed
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        assertThat(outputTopic.getQueueSize()).isEqualTo(3);
        assertThat(outputTopic.readRecordsToList()).allSatisfy(record ->
                assertThat(record.getValue().getBom().getVulnerabilitiesCount()).isZero());

        // Verify that the client was invoked just once, despite three results being returned.
        verify(ossIndexClientMock, Mockito.times(1)).getComponentReports(any(ComponentReportRequest.class));
    }

    @Test
    void testRetry() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.TOO_MANY_REQUESTS).build()))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.TOO_MANY_REQUESTS).build()))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.TOO_MANY_REQUESTS).build()))
                .thenReturn(getOssIndexResponseTestData("one-component-no-issues-response.json"));

        // Submit a complete batch, so we don't have to deal with punctuation
        // times of incomplete batches AND retries here.
        for (int i = 0; i < 128; i++) {
            inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.%d?type=jar&foo=bar".formatted(i)));
        }

        assertThat(outputTopic.getQueueSize()).isEqualTo(0);

        // "Wait" for the first retry to happen. The default initial
        // delay is 5 seconds, the multiplier is 2. The first retry can
        // happen anytime between 3.5 and 6.5 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(7));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(ossIndexClientMock, Mockito.times(2)).getComponentReports(any(ComponentReportRequest.class));

        // Second retry will happen between 7 and 13 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(14));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(ossIndexClientMock, Mockito.times(3)).getComponentReports(any(ComponentReportRequest.class));

        // Third retry will happen between 14 and 26 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(27));
        assertThat(outputTopic.getQueueSize()).isEqualTo(128);
        verify(ossIndexClientMock, Mockito.times(4)).getComponentReports(any(ComponentReportRequest.class));

        assertThat(outputTopic.readRecordsToList()).allSatisfy(record -> {
            assertThat(record.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
            assertThat(record.getValue().hasFailureReason()).isFalse();
            assertThat(record.getValue().getScanner()).isEqualTo(Scanner.SCANNER_OSSINDEX);
            assertThat(record.getValue().getBom().getVulnerabilitiesCount()).isZero();
        });
    }

    @Test
    void testNonRetryableError() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.BAD_REQUEST).build()));

        final TestRecord<String, ScanTask> inputRecord = createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1?type=jar&foo=bar");
        inputTopic.pipeInput(inputRecord);

        // First retry would happen between 3.5 and 6.5 seconds from "now".
        // Verify there is not retry happening, as there's no point in retrying
        // a definitive user error.
        testDriver.advanceWallClockTime(Duration.ofSeconds(7));
        verify(ossIndexClientMock, Mockito.times(1)).getComponentReports(any(ComponentReportRequest.class));

        assertThat(outputTopic.getQueueSize()).isEqualTo(1);
        final TestRecord<ScanKey, ScannerResult> outputRecord = outputTopic.readRecord();
        assertThat(outputRecord.key()).isEqualTo(inputRecord.getValue().getKey());
        assertThat(outputRecord.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_FAILED);
        assertThat(outputRecord.getValue().hasFailureReason()).isTrue();
        assertThat(outputRecord.getValue().getScanner()).isEqualTo(Scanner.SCANNER_OSSINDEX);
        assertThat(outputRecord.getValue().getBom().getVulnerabilitiesCount()).isZero();
    }

    @Test
    void testRetryMaxAttemptsExceeded() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.TOO_MANY_REQUESTS).build()))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.INTERNAL_SERVER_ERROR).build()))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.SERVICE_UNAVAILABLE).build()))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.BAD_GATEWAY).build()))
                .thenThrow(new RuntimeException(new SocketTimeoutException()))
                .thenThrow(CallNotPermittedException.class);

        // Submit a complete batch, so we don't have to deal with punctuation
        // times of incomplete batches AND retries here.
        for (int i = 0; i < 128; i++) {
            inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.%d?type=jar&foo=bar".formatted(i)));
        }

        assertThat(outputTopic.getQueueSize()).isEqualTo(0);

        // First retry will happen between 3.5 and 6.5 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(7));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(ossIndexClientMock, Mockito.times(2)).getComponentReports(any(ComponentReportRequest.class));

        // Second retry will happen between 7 and 13 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(14));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(ossIndexClientMock, Mockito.times(3)).getComponentReports(any(ComponentReportRequest.class));

        // Third retry will happen between 14 and 26 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(27));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(ossIndexClientMock, Mockito.times(4)).getComponentReports(any(ComponentReportRequest.class));

        // Fourth retry will happen between 28 and 52 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(53));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(ossIndexClientMock, Mockito.times(5)).getComponentReports(any(ComponentReportRequest.class));

        // Fifth retry will happen between 56 and 104 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(105));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(ossIndexClientMock, Mockito.times(6)).getComponentReports(any(ComponentReportRequest.class));

        // Sixth retry will happen between 112 and 120 seconds from "now".
        // 120 seconds is the default maximum delay.
        testDriver.advanceWallClockTime(Duration.ofSeconds(121));
        assertThat(outputTopic.getQueueSize()).isEqualTo(128);
        verify(ossIndexClientMock, Mockito.times(7)).getComponentReports(any(ComponentReportRequest.class));

        assertThat(outputTopic.readRecordsToList()).allSatisfy(record -> {
            assertThat(record.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_FAILED);
            assertThat(record.getValue().getFailureReason()).contains("exceeded");
            assertThat(record.getValue().getScanner()).isEqualTo(Scanner.SCANNER_OSSINDEX);
            assertThat(record.getValue().getBom().getVulnerabilitiesCount()).isZero();
        });
    }

    @Test
    void testCircuitBreaker() throws Exception {
        when(ossIndexClientMock.getComponentReports(any(ComponentReportRequest.class)))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.INTERNAL_SERVER_ERROR).build()));

        for (int i = 0; i < 105; i++) {
            for (int j = 0; j < 128; j++) {
                inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.%d?type=jar&foo=bar".formatted(i)));
            }
        }

        // Circuit breaker should have opened after 100 failures.
        verify(ossIndexClientMock, Mockito.times(100)).getComponentReports(any(ComponentReportRequest.class));
    }

    private TestRecord<String, ScanTask> createTestRecord(final String purl) throws MalformedPackageURLException {
        final PackageURL packageURL = new PackageURL(purl);
        final String key = packageURL.getCoordinates();
        final var component = Component.newBuilder()
                .setUuid(UUID.randomUUID().toString())
                .setPurl(purl)
                .build();
        final var scanKey = ScanKey.newBuilder()
                .setScanToken(UUID.randomUUID().toString())
                .setComponentUuid(component.getUuid())
                .build();
        return new TestRecord<>(key, ScanTask.newBuilder()
                .setKey(scanKey)
                .setScanner(Scanner.SCANNER_OSSINDEX)
                .setComponent(component)
                .build());
    }

    private List<ComponentReport> getOssIndexResponseTestData(final String name) throws IOException {
        return new ObjectMapper().readValue(
                getClass().getClassLoader().getResource(Paths.get("ossindex", name).toString()),
                new TypeReference<>() {
                }
        );
    }

}